# wp-schema

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE
.github/workflows/: ci.yml  release.yml
_gal/: work.gxl
src/: model.rs
src/engine/: clickhouse.rs  elasticsearch.rs  mod.rs  mysql.rs
