[package]
name = "wp-schema"
version = "0.1.5"
edition = "2024"

[lib]
name = "wp_schema"

[dependencies]
orion-error = "0.5"
orion_conf =  { version = "~0.3", features = ["toml"]}
wp-log=    { package = "wp-log", git = "https://github.com/wp-labs/wp-infras",tag = "v0.7.1" }
wp-error = { package = "wp-error", git = "https://github.com/wp-labs/wp-infras",tag = "v0.7.3" }
# 引入 schema 定义，兼容新版引擎的 proto/text 相关格式
# Core dependencies
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winnow = "0.7"
educe = { version = "0.4", default-features = false, features = ["Default", "Debug"] }

actix-web = { version = "4.12", optional = true }
prometheus = { version = "0.14", optional = true }
regex = { version = "1.12", optional = true }
lazy_static = { version = "1.5", optional = true }
uuid = { version = "1.19", features = ["v4"], optional = true }



[dev-dependencies]
env_logger = "~0.11.8"
chrono = "~0.4"
