[package]
name = "wp-schema"
version = "0.1.6"
edition = "2024"

[lib]
name = "wp_schema"

[dependencies]
orion-error = "0.5"
orion_conf =  "0.4"
wp-log=    "0.1"
wp-error = "0.7"
# 引入 schema 定义，兼容新版引擎的 proto/text 相关格式
# Core dependencies
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winnow = "0.7"
educe = { version = "0.4", default-features = false, features = ["Default", "Debug"] }

actix-web = { version = "4.12", optional = true }
prometheus = { version = "0.14", optional = true }
regex = { version = "1.12", optional = true }
lazy_static = { version = "1.5", optional = true }
uuid = { version = "1.19", features = ["v4"], optional = true }



[dev-dependencies]
env_logger = "~0.11.8"
chrono = "~0.4"
